--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -12,6 +10,10 @@
 /build
 
 # misc
+.env
+.env.example
+.env.local
+.env.staging
 .DS_Store
 .env.local
 .env.development.local
